feat: Enhanced UI with improved loading animations and movie card transitions

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     
-    <title>Welcome - Movie.Explore()</title>
+    <title>Reel.Radar | Uncover Films Effortlessly</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
